# duxun-film-simulation

./: .gitattributes  .gitignore  CHANGELOG.md  DuXunFilmSim-OFX-v5.0-license-mvp.zip.sha256  DuXunFilmSim-OFX-v5.0.zip.sha256  LICENSE  QUICKSTART.md  README.en.md  README.md  THIRD_PARTY_NOTICES.md  build_plugin.bat  convert_chinese.py  decode_all_films.py  decode_dtstyle.py  film_analysis.json  final_presets.json  generate_presets.py  install_dctl.bat
DuXunFilmSim-OFX-v5.0/: LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md
DuXunFilmSim-OFX-v5.0-license-mvp/: README.md  RELEASE_NOTES.md
dctl/: DuXun-Common.h  DuXun-Core.dctl  DuXun-Density.dctl  DuXun-Display.dctl  DuXun-Display.h  DuXun-Grain.dctl  DuXun-Mycolor.h  DuXun-Refraction.dctl
docs/: GITHUB_LISTING.md  PUBLISHING.md  beta-customer-test-guide-2026-06-13.md  beta-feedback-template-2026-06-13.md  beta-operator-ledger-template-2026-06-13.md  beta-operator-runbook-2026-06-13.md  beta-qa-2026-06-12.md  beta-release-readiness-2026-06-13.md  beta-support-drill-2026-06-13.md  beta-support-drill-result-2026-06-13.md  code-audit-2026-05-28.md  color-science.md  controlled-public-beta-package-2026-06-13.md  gpu-acceleration-plan.md  integration-plan.md  license-key-custody-and-issuance-2026-06-13.md  licensing-mvp-qa-2026-06-12.md  open-source-effect-candidates.md  preset-resource-mapping-2026-06-05.md  release-preflight-2026-06-12.md  resolve-visual-ab-2026-06-06.md  resolve-visual-ab-2026-06-09.md  resolve-visual-ab-2026-06-11.md  restart-handoff-2026-06-01.md  restart-handoff-2026-06-03.md  restart-handoff-2026-06-04.md  restart-handoff-2026-06-05.md  restart-handoff-2026-06-06.md  restart-handoff-2026-06-11.md  team-standards.md
ofx/: BUILD_GUIDE.md
ofx/DuXunFilm/: CMakeLists.txt  DuXunFilmSim.cpp  DuXunFilmSim.def  DuXunLicense.h  DuXunPlugin.cpp  DuXunPlugin.h  DuXunPluginFactory.cpp  DuXunProcess.cpp  DuXunProcess.h
scripts/: analyze_gpu_log.py  build.bat  install.bat  (+16 more)
(+112 files in other folders)
